--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
     "liveSassCompile.settings.formats": [
         {
-            "format": "css/",
+            "format": "expanded",
             "extensionName": ".css",
-            "savePath": "./css",
-            "savePathReplacementPairs": null
+            "savePath": "/css",
         }
     ]
 }
